--- a/单页面动画实践1/Main.html
+++ b/单页面动画实践1/Main.html
@@ -2,10 +2,9 @@
 <html>
 <head>
     <title></title>
-    <script src="../angular-1.4.0/angular.js"></script>
-    <script src="../angular-1.4.0/angular-route.js"></script>
-    <script src="App.js"></script>
-
+    <script src="../angular-1.4.0/angular.js" type="text/javascript"></script>
+    <script src="http://libs.useso.com/js/angular-ui/0.4.0/angular-ui.js" type="text/javascript"></script>
+    <script src="App.js" type="text/javascript"></script>
 </head>
 <body data-ng-app="myApp">
 <h1>AngularJS Home Page (Ui-router Demonstration)</h1>
