--- a/单页面动画实践1/PageTab.html
+++ b/单页面动画实践1/PageTab.html
@@ -1,16 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
 <div>
     <div>
-        <span style="width:100px"><a href="">Page-1</a></span>
-        <span style="width:100px"><a href="">Page-2</a></span>
-        <span style="width:100px"><a href="">Page-3</a></span>
+        <span style="width:100px" ui-sref=".Page1"><a href="">Page-1</a></span>
+        <span style="width:100px" ui-sref=".Page2"><a href="">Page-2</a></span>
+        <span style="width:100px" ui-sref=".Page3"><a href="">Page-3</a></span>
+    </div>
+    <div>
+        <div ui-view=""/>
     </div>
 </div>
-</body>
-</html>
