--- a/单页面动画实践1/Main.html
+++ b/单页面动画实践1/Main.html
@@ -2,12 +2,58 @@
 <html>
 <head>
     <title></title>
-    <script src="../angular-1.4.0/angular.js" type="text/javascript"></script>
-    <script src="http://libs.useso.com/js/angular-ui/0.4.0/angular-ui.js" type="text/javascript"></script>
-    <script src="App.js" type="text/javascript"></script>
+    <script src="../angular-1.4.0/angular.js"></script>
+    <script src="../angular-1.4.0/angular-animate.js"></script>
+    <script src="http://apps.bdimg.com/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
+    <script src="App.js"></script>
+    <style>
+        html,body{
+            margin: 0;
+            padding: 20px;
+            height: 100%;
+        }
+        body{
+            overflow: hidden;
+        }
+        @keyframes slideOutLeft {
+            to {
+                transform: translateX(-100%) scale(0);
+                opacity: 0;
+            }
+        }
+
+        @keyframes slideInRight {
+            from {
+                transform: translateX(100%) scale(1.4);
+                opacity: 0;
+            }
+            to {
+                transform: translateX(0) scala(1);
+                opacity: 1;
+            }
+        }
+        .swap{
+            width: 100%;
+            height: auto;
+            position: relative;
+        }
+        .page{
+            background: #00a0d2;
+            position: absolute;
+            top: 0;
+            left: 0;
+        }
+        .page.ng-enter {
+            animation:slideInRight 0.5s both ease-in;
+        }
+        .page.ng-leave {
+            animation:slideOutLeft 0.5s both ease-in;
+        }
+
+    </style>
 </head>
-<body data-ng-app="myApp">
+<body ng-app="myApp">
 <h1>AngularJS Home Page (Ui-router Demonstration)</h1>
-<div data-ui-view=""></div>
+<div ui-view=""></div>
 </body>
 <html>
