--- a/单页面动画实践1/PageTab.html
+++ b/单页面动画实践1/PageTab.html
@@ -4,7 +4,7 @@
         <span style="width:100px" ui-sref=".Page2"><a href="">Page-2</a></span>
         <span style="width:100px" ui-sref=".Page3"><a href="">Page-3</a></span>
     </div>
-    <div>
-        <div ui-view=""/>
+    <div class="swap">
+        <div ui-view="" class="page"></div>
     </div>
 </div>
