--- a/exp/app/index.html
+++ b/exp/app/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">    <title>BookStore</title>
     <link rel="stylesheet" href="framework/bootstrap-3.0.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="framework/bootstrap-3.0.0/css/bootstrap.theme.min.css">
     <link rel="stylesheet" href="css/index.css">
     <script src="framework/1.3.0.14/angular.js"></script>
     <script src="framework/1.3.0.14/angular-route.js"></script>
@@ -19,6 +18,8 @@
     <style>
         html,body{
             height: 100%;
+            font-family: "微软雅黑 Light";
+            overflow: hidden;
         }
         body{
             background-position: center;
@@ -46,16 +47,38 @@
             left: 40px;
             right: 40px;
         }
-
+        .inactive {
+            display: none;
+        }
+        .active {
+            display: block;
+        }
     </style>
 </head>
 
 <body id="body">
-    <header><h1 class="title" id="title">吃啥呢</h1></header>
-    <div class="page {{pageClass}}" id="{{pageClass}}" ng-view>
+    <header>
+        <div class="inactive" id="topBtn">
+            <a class="back-btn top-btn" href="javascript:history.go(-1)">返回</a>
+            <!--<a class="back-btn top-btn" ng-class="{ture:'inactive',false:'active'}[$rootScope.path!=='/']">返回</a>-->
+            <a class="sure-btn top-btn">确认</a>
+        </div>
+        <h1 class="title" id="title">吃啥呢?</h1>
+    </header>
+    <div class="page {{pageClass}}" ng-view>
     </div>
 </body>
 </html>
 <script>
-
+    function menuBtn(){
+        var str = document.URL.split("#/");
+//        console.log(str);
+        if(str[1]==""){
+            document.getElementById('topBtn').style.display =  'none';
+        }
+        else {
+            document.getElementById('topBtn').style.display =  'block';
+        }
+    }
+    setInterval(menuBtn,1500)
 </script>
