--- a/exp/app/index.html
+++ b/exp/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ng-app="bookStoreApp">
+<html ng-app="app">
 
 <head>
     <meta charset="UTF-8">
@@ -19,7 +19,7 @@
         html,body{
             height: 100%;
             font-family: "微软雅黑 Light";
-            overflow: hidden;
+            overflow-x: hidden;
         }
         body{
             background-position: center;
