--- a/exp/app/index.html
+++ b/exp/app/index.html
@@ -61,7 +61,7 @@
         <div class="inactive" id="topBtn">
             <a class="back-btn top-btn" href="javascript:history.go(-1)">返回</a>
             <!--<a class="back-btn top-btn" ng-class="{ture:'inactive',false:'active'}[$rootScope.path!=='/']">返回</a>-->
-            <a class="sure-btn top-btn">确认</a>
+            <a class="sure-btn top-btn" href="#/list">确认</a>
         </div>
         <h1 class="title" id="title">吃啥呢?</h1>
     </header>
