--- a/exp/app/tpls/hello.html
+++ b/exp/app/tpls/hello.html
@@ -1,7 +1,17 @@
 <!--<input ng-model="title">-->
-<li class="eating-card" ng-repeat="box in boxs"  ng-click="del($index)">
+<li class="eating-card" ng-repeat="box in boxs"  ng-style="myObj"  ng-controller="mymymy">
     <div class="eating-card-title"><span>{{box.title}}</span></div>
-    <a ng-show="$index!=1" ng-click="del($index)">删除</a>
+    <a class="del-box" ng-click="del($index)"></a>
 </li>
-<p>{{greeting.text}},angular</p>
-<p><a href="#/list">下一页</a></p>
+<a ng-click="alert()">增加一个</a>
+<!--<p>{{greeting.text}},angular</p>-->
+<!--<p><a href="#/list">下一页</a></p>-->
+
+
+<div class="dialog {{showDialog}}">
+    <input placeholder="增加选择" ng-model="addtitle">{{addtitle}}
+    <div class="cofilm-btn">
+        <a class="add-btn" ng-click="add()">确定</a>
+        <a class="cancel-btn" ng-click="cancel()">取消</a>
+    </div>
+</div>
