local storage added

--- a/exp/app/tpls/bookList.html
+++ b/exp/app/tpls/bookList.html
@@ -1,5 +1,8 @@
-<ul>
-    <li>
-        书名:{{book.title}}&nbsp;&nbsp;&nbsp;作者:{{book.author}}
-    </li>
-</ul>
+<div class="asi-box">
+    <div class="asi-card" ng-style="myObj" ng-controller="mymymy">
+        <div class="asi-card-title" style="background-color:rgba(173, 171, 163, 0.7)" ng-controller="HelloCtrl"><span>{{boxTitleRodon}}</span></div>
+    </div>
+    <div class="re-asi-btn">
+        <span ng-click="refresh()" >不对不对，再选一次！</span>
+    </div>
+</div>
