--- a/exp/app/index.html
+++ b/exp/app/index.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">    <title>BookStore</title>
-    <link rel="stylesheet" href="framework/bootstrap-3.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/index.css">
     <script src="framework/1.3.0.14/angular.js"></script>
     <script src="framework/1.3.0.14/angular-route.js"></script>
@@ -20,8 +19,11 @@
             height: 100%;
             font-family: "微软雅黑 Light";
             overflow-x: hidden;
+            margin: 0;
+            padding: 0;
         }
         body{
+            background:#efeff4;
             background-position: center;
             background-size: cover;
         }
@@ -80,5 +82,5 @@
             document.getElementById('topBtn').style.display =  'block';
         }
     }
-    setInterval(menuBtn,1500)
+    setInterval(menuBtn,1500);
 </script>
