--- a/exp/app/tpls/hello.html
+++ b/exp/app/tpls/hello.html
@@ -1,4 +1,4 @@
-<li class="eating-card" ng-repeat="box in boxs"  ng-style="myObj"  ng-controller="mymymy">
+<li class="eating-card" ng-repeat="box in boxs track by $index" ng-click="del($index)" ng-style="myObj" ng-controller="mymymy">
     <div class="eating-card-title"><span>{{box.title}}</span></div>
     <a class="del-box" ng-click="del($index)"></a>
 </li>
