--- a/exp/app/tpls/bookList.html
+++ b/exp/app/tpls/bookList.html
@@ -1,6 +1,6 @@
 <div class="asi-box">
-    <div class="asi-card" ng-style="myObj" ng-controller="mymymy">
-        <div class="asi-card-title" style="background-color:rgba(173, 171, 163, 0.7)" ng-controller="HelloCtrl">
+    <div class="asi-card" ng-style="changeBg">
+        <div class="asi-card-title" style="background-color:rgba(173, 171, 163, 0.7)">
             <span ng-bind="boxTitleRodon">{{titleRodon}}</span>
         </div>
     </div>
