--- a/exp/app/tpls/hello.html
+++ b/exp/app/tpls/hello.html
@@ -10,7 +10,7 @@
 
 <div class="dialog" style="transform:{{showDialog}}">
     <!--<input placeholder="输入选项" ng-model="addtitle" value="{{addtitle}}">-->
-    <input placeholder="输入选项" ng-model="addtitle" value="{{localTitle}}">
+    <input placeholder="输入选项" ng-model="addtitle">
     <div class="cofilm-btn">
         <a class="ok-btn" ng-click="add()">确定</a>
         <a class="cancel-btn" ng-click="cancel()">取消</a>
